[package]
name = "pkg"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8"
byteorder = "1.4.3"
cbc = "0.1"
error = { path = "../error" }
fs = { path = "../fs" }
memmap2 = "0.7"
pfs = { path = "../pfs" }
rsa = "0.9"
sha2 = "0.10"
thiserror = "1.0"
util = { version = "0.1.0", path = "../util" }
